# swri-simple-uam-pipeline

./: .coverage-tmp.html  .gitignore  .gitmodules  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTES.md  README.md  environment.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  tasks.py
assets/: component-diagram.drawio.xml
assets/config/: auth.conf.yaml  d2c_worker.conf.yaml  print_all.conf.yaml  print_all_resolved.conf.yaml  win_setup.conf.yaml
assets/deployment-components/: index.html
assets/deployment-rules/: index.html
base-proj/: .copier-answers.yml  .gitignore  .gitpod.dockerfile  .gitpod.yml  README.md
base-proj/.github/: FUNDING.yml
base-proj/.github/ISSUE_TEMPLATE/: bug_report.md
base-proj/.github/workflows/: ci.yml
base-proj/config/: flake8.ini  mypy.ini  pytest.ini
base-proj/src/simple_uam/: cli.py
base-proj/tests/: __init__.py  conftest.py  test_cli.py
contributing/: index.html
data/: corpus_static_dump.json
data/creoson/: creopyson-0.7.3-py2.py3-none-any.whl
data/gremlin-server/: gremlin-server-uam.yaml  uam-corpus.groovy
data/setup/: bootstrap_win.ps1
docs/: changelog.md  contributing.md  credits.md  gen_ref_nav.py  index.md  license.md  todo.md  troubleshooting.md
docs/assets/: component-diagram.config.md  component-diagram.drawio.xml  deployment-components.md  deployment-rules.md
docs/assets/config/: auth_default.conf.yaml  broker.conf.yaml  corpus.conf.yaml  craidl.conf.yaml  d2c_workspace.conf.yaml  paths.conf.yaml
docs/css/: mkdocstrings.css
docs/setup/: aws-instance.md  aws-network.md  broker.md  client.md  corpus.md  general.md  graph.md  intro.md  license_server.md  notes.md  worker.md
docs/setup/worker/: topology.md
docs/usage/: clients.md  config.md  craidl.md  license.md  workers.md  workspaces.md
license/: index.html
reference/SUMMARY/: index.html
reference/simple_uam/: index.html
reference/simple_uam/craidl/: index.html
reference/simple_uam/direct2cad/: index.html
reference/simple_uam/tools/: index.html
reference/simple_uam/util/: index.html
reference/simple_uam/worker/: index.html
reference/simple_uam/workspace/: index.html
scripts/: gen_credits.py  multirun.sh  setup.sh
search/: search_index.json
setup/: README.md  README_AWS.md  README_LICENSE.md  README_WORKER.md  pyproject.toml  tasks.py
setup/aws-instance/: index.html
setup/aws-network/: index.html
setup/broker/: index.html
setup/client/: index.html
setup/corpus/: index.html
setup/data/: ContextMenuAdminTess.reg  bootstrap_win.ps1  disable_ieesc.ps1  install.ps1  setup.ps1
setup/general/: index.html
setup/graph/: index.html
setup/intro/: index.html
setup/license_server/: index.html
setup/src/setup/: __main__.py  cli.py
setup/tests/: test_cli.py
setup/worker/: index.html
simple_uam/: cli.py  tasks.py
simple_uam/client/: inputs.py  results.py  watch.py
simple_uam/config/: cli.py  tasks.py
simple_uam/craidl/: gremlin.py  info_files.py
simple_uam/craidl/corpus/: abstract.py  get_corpus.py  gremlin.py  static.py
simple_uam/craidl/designs/: __init__.py  abstract.py  gremlin.py  static.py
simple_uam/data/: corpus_static_dump.json
simple_uam/data/creoson/: setvars.bat
simple_uam/data/fdm/: get_libs.py  msys2_shim.py
simple_uam/data/gremlin_server/: gremlin-server-uam.yaml  uam-corpus.groovy
simple_uam/direct2cad/: __init__.py  actors.py  manager.py  session.py
simple_uam/direct2cad/actions/: actors.py  base.py  cli_wrapper.py  client.py  local.py
simple_uam/fdm/compile/: __init__.py  build_ops.py  manager.py  session.py  workspace.py
simple_uam/fdm/eval/: ]  manager.py  session.py  workspace.py
simple_uam/fdm/parsing/: __init__.py  block_parser.py  fdm_dump.py  hackathon_block.py  line_parser.py  metrics_block.py  minpack_trim_block.py  misc_vars_block.py  motor_power_block.py  path_file.py  path_result_block.py  state_desc_block.py  static_blocks.py  util.py
simple_uam/root_dev/: __init__.py  __main__.py  cli.py  tasks.py
simple_uam/tools/client/: cli.py  direct2cad.py  watch.py
simple_uam/tools/config_mgr/: cli.py
simple_uam/tools/craidl/: cli.py  examples.py  stub_server.py  tasks.py
simple_uam/tools/d2c_workspace/: __main__.py  cli.py  env.py  tasks.py
simple_uam/tools/dev_util/: tasks.py
simple_uam/tools/fdm_util/: cli.py
simple_uam/tools/fdm_workspace/: cli.py
simple_uam/tools/setup_win/: choco.py  cli.py  fdm.py  shared.py  worker.py
simple_uam/tools/test/: cli.py  direct2cad.py
simple_uam/tools/worker/: service.py  worker.py
simple_uam/util/: __init__.py  exception.py
simple_uam/util/config/: __init__.py  corpus_config.py  craidl_config.py  d2c_worker_config.py  d2c_workspace_config.py  manager.py  (+7 more)
simple_uam/worker/: __init__.py  broker.py  run_worker.py
simple_uam/workspace/: manager.py  session.py  workspace.py
subpackage-template/: README.md.jinja  TEMPLATE_README.md  copier.yml  dist_name.txt.jinja  pyproject.toml.jinja
subpackage-template/{{subpackage_distribution_name}}/: README.md.jinja  pyproject.toml.jinja  tasks.py.jinja
subpackages/setup/: pyproject.toml  tasks.py
subpackages/template/: copier.yml  pyproject.toml.jinja  tasks.py.jinja
subpackages/uam-worker/: pyproject.toml
subpackages/uam-workspace/: pyproject.toml
subpackages/util/: pyproject.toml  tasks.py
subpackages/worker/: pyproject.toml
subpackages/workspace/: pyproject.toml
subpackages/workspace/uam_workspace/: __init__.py  cli.py
subpackages/workspace/uam_workspace/config/: __init__.py
subpackages/workspace/uam_workspace/generic/: config.py  manager.py
uam-worker/: README.md  pyproject.toml  tasks.py
uam-worker/tests/: test_cli.py
uam-workspace/: README.md  pyproject.toml  tasks.py
uam-workspace/tests/: __init__.py  test_cli.py
usage/clients/: index.html
usage/config/: index.html
usage/craidl/: index.html
usage/license/: index.html
usage/workers/: index.html
usage/workspaces/: index.html
util/: README.md  pyproject.toml  tasks.py
util/config/: flake8.ini
util/tests/: test_cli.py
(+285 files in other folders)
