[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[project]
name = "simple-uam"
description = "A set of libraries and wrappers around the SWRi athens-uav project."
authors = [{name = "Rohit Ramesh", email = "rkr@berkeley.edu"}]
license-expression = "MIT"
readme = "README.md"
requires-python = ">=3.9,<3.10"
keywords = []
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Software Development :: Documentation",
    "Topic :: Utilities",
    "Typing :: Typed",
]

dependencies = [
    "omegaconf>=2.2.0",
    "attrs>=21.4.0",
    "invoke>=1.7.0",
    "structlog>=21.5.0",
    "rich>=12.4.1",
    "colorama>=0.4.4",
    "simpleuam-util @ file:///${PROJECT_ROOT}/subpackages/util",
    "simpleuam-setup @ file:///${PROJECT_ROOT}/subpackages/setup",
    "simpleuam-workspace @ file:///${PROJECT_ROOT}/subpackages/workspace",
    "simpleuam-workser @ file:///${PROJECT_ROOT}/subpackages/worker",
]

[project.urls]
Homepage = "https://LOGiCS-Project.github.io/swri-simple-uam-pipleline"
Documentation = "https://LOGiCS-Project.github.io/swri-simple-uam-pipleline"
Changelog = "https://LOGiCS-Project.github.io/swri-simple-uam-pipleline/changelog"
Repository = "https://github.com/LOGiCS-Project/swri-simple-uam-pipleline"
Issues = "https://github.com/LOGiCS-Project/swri-simple-uam-pipleline/issues"
Discussions = "https://github.com/LOGiCS-Project/swri-simple-uam-pipleline/discussions"

[project.scripts]
simpleuam-config = "simple_uam.config.cli:main"
setup-win = "setup.windows.cli:main"
workspace-mgr = "uam_workspace.cli:main"

[tool.pdm]
version = {use_scm = true}
editable-backend = "editables"

[tool.pdm.scripts]
config = {call = "simple_uam.config.cli:main(['pdm run config'])"}
check-docs = {call = "simple_uam.root_dev.cli:main(['pdm run check-docs','check-docs'])"}
docs = {call = "simple_uam.root_dev.cli:main(['pdm run docs','docs'])"}
docs-serve = {call = "simple_uam.root_dev.cli:main(['pdm run docs-serve','docs-serve'])"}
docs-deploy = {call = "simple_uam.root_dev.cli:main(['pdm run docs-deploy','docs-deploy'])"}
check = {call = "util.dev.cli:main(['pdm run check','check'])"}
check-quality = {call = "util.dev.cli:main(['pdm run check-quality','check-quality'])"}
check-types = {call = "util.dev.cli:main(['pdm run check-types','check-types'])"}
clean = {call = "util.dev.cli:main(['pdm run clean','clean'])"}
reset-pdm = {call = "util.dev.cli:main(['pdm run reset-pdm','reset-pdm'])"}
format = {call = "util.dev.cli:main(['pdm run format','format'])"}
test = {call = "util.dev.cli:main(['pdm run test','test'])"}
coverage = {call = "util.dev.cli:main(['pdm run coverage','coverage'])"}

[tool.pdm.dev-dependencies]
editable = [
    "-e file:///${PROJECT_ROOT}/subpackages/util#egg=simpleuam-util",
    "-e file:///${PROJECT_ROOT}/subpackages/setup#egg=simpleuam-setup",
    "-e file:///${PROJECT_ROOT}/subpackages/workspace#egg=simpleuam-workspace",
    "-e file:///${PROJECT_ROOT}/subpackages/worker#egg=simpleuam-worker",
]
docs = [
    "mkdocs>=1.3",
    "mkdocs-coverage>=0.2",
    "mkdocs-gen-files>=0.3",
    "mkdocs-literate-nav>=0.4",
    "mkdocs-material>=7.3",
    "mkdocs-section-index>=0.3",
    "mkdocstrings[python]>=0.18",
    "markdown-callouts>=0.2",
    "markdown-exec>=0.5",
    "toml>=0.10",
]
