[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"

[project]
name = "simple-uam"
description = "A set of libraries and wrappers around the SWRi athens-uav project."
authors = [{name = "Rohit Ramesh", email = "rkr@berkeley.edu"}]
license-expression = "MIT"
readme = "README.md"
requires-python = ">=3.9,<3.11"
keywords = []
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Software Development :: Documentation",
    "Topic :: Utilities",
    "Typing :: Typed",
]

dependencies = [
    "omegaconf>=2.2.0",
    "attrs>=21.4.0",
    "invoke>=1.7.0",
    "structlog>=21.5.0",
    "gremlinpython>=3.6.0",
    "filelock>=3.7.1",
    "dramatiq[rabbitmq,redis]>=1.13.0",
    "platformdirs>=2.5.2",
]

[project.urls]
Homepage = "https://LOGiCS-Project.github.io/swri-simple-uam-pipeline"
Documentation = "https://LOGiCS-Project.github.io/swri-simple-uam-pipeline"
Repository = "https://github.com/LOGiCS-Project/swri-simple-uam-pipeline/"
Issues = "https://github.com/LOGiCS-Project/swri-simple-uam-pipeline/issues"
Discussions = "https://github.com/LOGiCS-Project/swri-simple-uam-pipeline/discussions"

[project.scripts]
suam-config = "simple_uam.tools.config_mgr.cli:main"
craidl = "simple_uam.tools.craidl.cli:main"
d2c-workspace = "simple_uam.tools.d2c_workspace.cli:main"
suam-worker = "simple_uam.tools.worker.cli:main"
suam-client = "simple_uam.tools.client.cli:main"

[tool.pdm]
version = {use_scm = true}

[tool.pdm.build]
#package-dir = "src"
editable-backend = "editables"
# includes = [
#     "data/*",
# ]

[tool.pdm.scripts]
# config-mgr = {call = "simple_uam.tools.config_mgr.cli:main(['pdm run config-mgr'])"}
# craidl = {call = "simple_uam.tools.craidl.cli:main(['pdm run craidl'])"}
setup-win = {call = "simple_uam.tools.setup_win.cli:main(['pdm run setup-win'])"}
check-docs = {call = "simple_uam.tools.dev_util.cli:main(['pdm run check-docs','check-docs'])"}
docs = {call = "simple_uam.tools.dev_util.cli:main(['pdm run docs','docs'])"}
docs-serve = {call = "simple_uam.tools.dev_util.cli:main(['pdm run docs-serve','docs-serve'])"}
docs-deploy = {call = "simple_uam.tools.dev_util.cli:main(['pdm run docs-deploy','docs-deploy'])"}
# check = {call = "simple_uam.tools.dev_util.cli:main(['pdm run check','check'])"}
# check-quality = {call = "simple_uam.tools.dev_util.cli:main(['pdm run check-quality','check-quality'])"}
# check-types = {call = "simple_uam.tools.dev_util.cli:main(['pdm run check-types','check-types'])"}
# clean = {call = "simple_uam.tools.dev_util.cli:main(['pdm run clean','clean'])"}
# reset-pdm = {call = "simple_uam.tools.dev_util.cli:main(['pdm run reset-pdm','reset-pdm'])"}
# format = {call = "simple_uam.tools.dev_util.cli:main(['pdm run format','format'])"}
# test = {call = "simple_uam.tools.dev_util.cli:main(['pdm run test','test'])"}
# coverage = {call = "simple_uam.tools.dev_util.cli:main(['pdm run coverage','coverage'])"}

[tool.pdm.dev-dependencies]
pretty-log=[
    "rich>=12.4.1",
    "colorama>=0.4.4",
]
docs = [
    "mkdocs>=1.3",
    "mkdocs-coverage>=0.2",
    "mkdocs-gen-files>=0.3",
    "mkdocs-literate-nav>=0.4",
    "mkdocs-material>=7.3",
    "mkdocs-section-index>=0.3",
    "mkdocstrings[python]>=0.18",
    "markdown-callouts>=0.2",
    "markdown-exec>=0.5",
    "toml>=0.10",
]
format = [
    "autoflake>=1.4",
    "black>=21.10b0",
    "isort>=5.10",
]
# quality = [
#     "darglint>=1.8",
#     "flake8-bandit>=2.1",
#     "flake8-black>=0.2",
#     "flake8-bugbear>=21.9",
#     "flake8-builtins>=1.5",
#     "flake8-comprehensions>=3.7",
#     "flake8-docstrings>=1.6",
#     "flake8-pytest-style>=1.5",
#     "flake8-string-format>=0.3",
#     "flake8-tidy-imports>=4.5",
#     "flake8-variables-names>=0.0",
#     "pep8-naming>=0.12",
#     "wps-light>=0.15",
# ]
# tests = [
#     "pytest>=6.2",
#     "pytest-cov>=3.0",
#     "pytest-randomly>=3.10",
#     "pytest-xdist>=2.4",
# ]
typing = [
    "mypy>=0.910",
    "types-markdown>=3.3",
    "types-toml>=0.10",
]

# [tool.black]
# line-length = 120
# exclude = "tests/fixtures"

# [tool.isort]
# line_length = 120
# not_skip = "__init__.py"
# multi_line_output = 3
# force_single_line = false
# balanced_wrapping = true
# default_section = "THIRDPARTY"
# known_first_party = "simple_uam"
# include_trailing_comma = true